--- a/release/changelog
+++ b/release/changelog
@@ -3,8 +3,7 @@
 # changelog generates two files, Contributors and CHANGELOG with all changes
 # from git. These should be included in every foreman-docker release.
 
-
-cmd=`git log --pretty='format:%ci::%an <%ae>::%s'`
+cmd = `git log --pretty='format:%ci::%an <%ae>::%s'`
 
 list = {}
 list_order = []
@@ -17,16 +16,16 @@ cmd.each_line do |l|
   date, _time, _zone = date.split(" ")
 
   id = "#{date}\t#{author}"
-  if not list[id]
+  unless list[id]
     list[id] = []
-    list_order << {:id => id, :value => list[id]}
+    list_order << { :id => id, :value => list[id] }
   end
   list[id] << subject
   contributors << author
 end
 
 # list.each do |id, value|
-file = File.new(changelog_file,"w")
+file = File.new(changelog_file, "w")
 list_order.each do |i|
   id = i[:id]
   value = i[:value]
@@ -36,7 +35,7 @@ list_order.each do |i|
   file.puts "\n"
 end
 file.close
-file = File.new(contributors_file,"w")
+file = File.new(contributors_file, "w")
 file.puts "Contributors (sorted alphabetically)"
 file.puts "\n"
 file.puts contributors.sort.uniq.join("\n")
